# TUM-MCLR

./: .gitignore  .gitmodules  README.md  frames.gv
.devcontainer/: Dockerfile  devcontainer.json
isaac/: .gitkeep
mclr_ws/src/: README.md  Readme.md
mclr_ws/src/TUM-MCLR/bullet_sims/: CMakeLists.txt  package.xml
mclr_ws/src/TUM-MCLR/simulator/: README.md  package.xml
mclr_ws/src/bullet_sims/: CMakeLists.txt  package.xml
mclr_ws/src/bullet_sims/doc/: data.csv  grp.csv  report.md
mclr_ws/src/bullet_sims/launch/: t23.launch  t3.launch  t4.launch  t41.launch  t42.launch  t61.launch  t62.launch
mclr_ws/src/bullet_sims/rviz/: t23.rviz  t3_config.rviz  t41.rviz
mclr_ws/src/bullet_sims/scripts/: 01_standing.py  02_one_leg_stand.py  03_plotter.py  03_squating.py  t21.py  t21_r.py  t22.py  t23.py  t2_temp.py  t3_main.py  t3_r.py  t61.py  t62.py  t6_plotter.py
mclr_ws/src/doc/: record.md
mclr_ws/src/doc/Deliverables_Legacy/: Readme_D1.md  Readme_D2.md
mclr_ws/src/ros_visuals/: CMakeLists.txt  package.xml
mclr_ws/src/ros_visuals/launch/: tut11.launch  tut12.launch  tut13.launch
mclr_ws/src/ros_visuals/rviz/: t11.rviz  t12.rviz  t13.rviz
mclr_ws/src/ros_visuals/scripts/: t11.py  t11_l.py  (+3 more)
mclr_ws/src/simulator/: CMakeLists.txt  README.md  setup.py
mclr_ws/src/talos/: CMakeLists.txt  package.xml
mclr_ws/src/tutorial_4/: CMakeLists.txt  package.xml  setup.py
mclr_ws/src/tutorial_4/src/tutorial_4/: config.py  tsid_wrapper.py
mclr_ws/src/tutorial_7/: CMakeLists.txt  package.xml
mclr_ws/src/tutorial_8/: CHANGELOG.md  CMakeLists.txt  package.xml
(+28 files in other folders)
